<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:title="@string/home">
        </item>
        <item
            android:id="@+id/encounter"
            android:title="@string/encounter">
        </item>
        <item
            android:id="@+id/smart_life"
            android:title="@string/smart_life">
        </item>
        <item
            android:title="@string/more">
            <menu>
                <item
                    android:id="@+id/about"
                    android:title="@string/about"/>
                <item
                    android:id="@+id/settings"
                    android:title="@string/settings"/>
                <item
                    android:id="@+id/logout"
                    android:title="@string/logout"/>
            </menu>
        </item>
    </group>
</menu>