<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <EditText
        android:layout_width="0dp"
        android:layout_height="0dp" />
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">
        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:digits="@string/usernameFormat"
            android:maxLength="20"
            android:hint="@string/username"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">
        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLength="16"
            android:hint="@string/login_password"/>
    </android.support.design.widget.TextInputLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">
        <Button
            android:id="@+id/btn_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/btn_selector"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:textSize="18sp"
            android:text="@string/login"
            />
        <Button
            android:id="@+id/btn_forget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@id/btn_login"
            android:layout_below="@id/btn_login"
            android:layout_marginTop="5dp"
            android:background="#00000000"
            android:text="@string/forget"
            android:textSize="16sp"
            android:textColor="@color/btn_default"
            style="?android:attr/borderlessButtonStyle"/>
        <Button
            android:id="@+id/btn_jump_reg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/btn_login"
            android:layout_below="@id/btn_login"
            android:layout_marginTop="5dp"
            android:background="#00000000"
            android:gravity="left|center_vertical"
            android:text="@string/register"
            android:textSize="16sp"
            android:textColor="@color/btn_default"
            style="?android:attr/borderlessButtonStyle"/>
    </RelativeLayout>
</LinearLayout>