<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_marginLeft="30dp"
    android:layout_marginRight="30dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="phone"
            android:hint="@string/phone"/>
        <Button
            android:id="@+id/btn_getcode"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_weight="3"
            android:background="@drawable/btn_selector"
            android:text="获取验证码"
            android:textColor="@android:color/white"/>

    </LinearLayout>



    <EditText
        android:id="@+id/et_verifycode"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:inputType="number"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:hint="@string/verifycode"/>

    <Button
        android:id="@+id/btn_verify"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/btn_selector"
        android:textColor="@android:color/white"
        android:gravity="center"
        android:textSize="18sp"
        android:text="@string/verify"
        />


</LinearLayout>